--- a/views/partials/project-demo.jade
+++ b/views/partials/project-demo.jade
@@ -1,5 +1,5 @@
-div(style="background-color: white")
-	.center-block
+div(style="background-color:black;")
+	.pname
 		h1.fancy 
 			span {{title1}}
 	.border
@@ -8,8 +8,8 @@ div(style="background-color: white")
 				slide(ng-repeat="slide in slides1" active="slide.active")
 					img(ng-src="{{slide.image}}" style="margin:auto;")
 
-		hr
-	.center-block
+		//- hr
+	.pname
 		h1.fancy 
 			span {{title2}}
 	.border
