--- a/public/stylesheets/main-style.css
+++ b/public/stylesheets/main-style.css
@@ -7,7 +7,7 @@ html {
   height: 100%;
   width: 100%;
   background-repeat: no-repeat;
-  background-size: contain;
+  /*background-size: contain;*/
   z-index: -1;
   filter: brightness(50%);
   overflow-x: hidden;
@@ -68,11 +68,6 @@ nav .im-centered .col-md-3 a:hover {
   color: #29F7CF;
   text-decoration: none;
 }
-
-
-
-
-
 .im-centered {
   margin: auto;
   max-width: 100%;
@@ -80,7 +75,7 @@ nav .im-centered .col-md-3 a:hover {
 }
 .profile-pic {
   margin-top: 60px;
-  margin-bottom: 100px;
+  margin-bottom: 300px;
 }
 .triangle-bottomleft {
   /*height: 500p;*/
