--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -39,13 +39,13 @@ block content
 					#trigger1.spacer.s0
 					#animate1.box2.skin
 						p Ke is good
-				.col-md-12(style="padding-left:20px;")
+				.col-md-12(style="padding-left:30px;")
 					h2
 						#trigger1.spacer.s0
-						#animate1.box2.skin
-							span(style="display:block;font-weight:100;font-size:100px;word-spacing:-25px;line-height:85%;color:white;") Ke Zhang
-							span(style="display:block;font-weight:300;font-size:145px;color:white;word-spacing:-25px;") WEB DESIGN
-							span(style="font-weight:700;font-size:155px;margin-top:6px;line-height:85%;word-spacing:-25px;color:white;") DEVELOPMENT
+						#s2.box2.skin
+							span(style="opacity:0;display:block;font-weight:100;font-size:100px;word-spacing:-25px;line-height:85%;color:white;") Ke Zhang
+							span(style="opacity:0;display:block;font-weight:300;font-size:145px;color:white;word-spacing:-25px;") WEB DESIGN
+							span#12(style="opacity:0;font-weight:700;font-size:155px;margin-top:6px;line-height:85%;word-spacing:-25px;color:white;") DEVELOPMENT
 			div(ng-view)
 			//- hr
 		//- .foot
