--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -31,21 +31,16 @@ block content
 							i.fa.fa-github
 						a.btn.btn-lg.icon-customize(href="mailto:zhangkecyrus@gmail.com")
 							i.fa.fa-envelope
-			//- hr
-			//- .triangle-bottomleft
-
 			.spaceblack.row
-				//- .col-md-12
-					#trigger1.spacer.s0
-					#animate1.box2.skin
-						p Ke is good
 				.col-md-12(style="padding-left:30px;")
 					h2
 						#trigger1.spacer.s0
 						#s2.box2.skin
 							span(style="opacity:0;display:block;font-weight:100;font-size:100px;word-spacing:-25px;line-height:85%;color:white;") Ke Zhang
 							span(style="opacity:0;display:block;font-weight:300;font-size:145px;color:white;word-spacing:-25px;") WEB DESIGN
-							span#12(style="opacity:0;font-weight:700;font-size:155px;margin-top:6px;line-height:85%;word-spacing:-25px;color:white;") DEVELOPMENT
+							span(style="opacity:0;display:block;font-weight:700;font-size:155px;margin-top:6px;line-height:85%;word-spacing:-25px;color:white;") DEVELOPMENT
+							span.trianglefooter(style="opacity:0;display:block;")
+			.triangle-bottomright		
 			div(ng-view)
 			//- hr
 		//- .foot
