--- a/views/partials/project-demo.jade
+++ b/views/partials/project-demo.jade
@@ -1,4 +1,4 @@
-div(style="background-color:black;padding-bottom:20px;padding-top:20%;")
+div(style="background-color:#232323;padding-bottom:20px;padding-top:5%;")
 	.pname
 		h1.fancy 
 			span {{title1}}
@@ -8,7 +8,8 @@ div(style="background-color:black;padding-bottom:20px;padding-top:20%;")
 				slide(ng-repeat="slide in slides1" active="slide.active")
 					img(ng-src="{{slide.image}}" style="margin:auto;")
 
-		//- hr
+.triangle-bottomleft 
+div(style="background-color:#3F8093;padding-bottom:20px;padding-top:5%;")
 	.pname
 		h1.fancy 
 			span {{title2}}
