project demo done, need automate way in future

--- a/public/stylesheets/main-style.css
+++ b/public/stylesheets/main-style.css
@@ -54,7 +54,8 @@ body {
   color: #aaa;
 }
 .navbar:hover {
-  background-color: rgb(90,88,255);
+  /*background-color: rgb(90,88,255);*/
+  background-color: #0B0021;
 }
 nav .im-centered {
   width: 100%;
@@ -75,12 +76,12 @@ nav .im-centered .col-md-3 a:hover {
 }
 .profile-pic {
   margin-top: 60px;
-  margin-bottom: 300px;
+  margin-bottom: 200px;
 }
+/*page triangle div*/
 .trianglefooter {
   max-width: 60%;
   z-index: 99;
-
   border-bottom: 65px solid black;
   border-left: 1000px solid transparent;
   background-color: rgb(255, 227, 36);
@@ -95,6 +96,15 @@ nav .im-centered .col-md-3 a:hover {
   background-color: #232323;
   /*rgb(255, 227, 36)*/
 }
+.triangle-bottomright2 {
+  max-width: 100%;
+  z-index: 99;
+  left: 0;
+  right: 0;
+  border-top: 250px solid #3F8093;
+  border-left: 3000px solid transparent;
+  background-color: rgb(90,88,255);
+}
 .triangle-bottomleft {
   max-width: 100%;
   z-index: 99;
@@ -106,7 +116,7 @@ nav .im-centered .col-md-3 a:hover {
 }
 .spaceblack {
   padding-top: 10%;
-  padding-bottom: 20%;
+  padding-bottom: 15%;
   min-height: 600px;
   background-color: black;
   z-index: 99;
