--- a/views/partials/project-demo.jade
+++ b/views/partials/project-demo.jade
@@ -1,30 +1,34 @@
-div(style="background-color:#232323;")
+div(style="background-color:#232323;padding-bottom:5px;")
+	.row
 	.pname
 		h1.fancy 
-			span {{title3}}
+			span {{title3}}&nbsp;
+				a(href="#")
+					i.fa.fa-question-circle
 	.border
 		div
 			carousel(interval="3000")
 				slide(ng-repeat="slide in slides3" active="slide.active")
 					img(ng-src="{{slide.image}}" style="margin:auto;")
-		.row
-			.col-md-4.col-md-offset-4
-				p hello guys
 .triangle-bottomleft 
-div(style="background-color:#3F8093;padding-bottom:20px;")
+div(style="background-color:#3F8093;padding-bottom:5px;")
 	.pname
 		h1.fancy 
-			span {{title2}}
+			span {{title2}}&nbsp;
+				a(href="#")
+					i.fa.fa-question-circle
 	.border
 		div
 			carousel(interval="3000")
 				slide(ng-repeat="slide in slides2" active="slide.active")
 					img(ng-src="{{slide.image}}" style="margin:auto;")
 .triangle-bottomright2
-div(style="background-color:rgb(90,88,255);padding-bottom:20px;")
+div(style="background-color:rgb(64,20,112);padding-bottom:5px;")
 	.pname
 		h1.fancy 
-			span {{title1}}
+			span {{title1}}&nbsp;
+				a(href="#")
+					i.fa.fa-question-circle
 	.border
 		div
 			carousel(interval="3000")
