--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -16,11 +16,11 @@ block content
 		.content
 			.center-block
 				.description
-					p Ke is a passionate software developer who is fueled by the idea of designing and creating.
+					p Ke is a passionate computer polyglot who is fueled by the idea of designing and creating.
 			.container.profile-pic
 				.row
 					.col-lg-12.col-xs-12
-						img(src="images/profile.jpg")
+						img(src="images/touxiang.png" style="border-radius: 50%;")
 					.col-md-8.col-xs-6
 					.col-md-4.col-xs-6.social-logo
 						a.btn.btn-social.btn-lg.btn-facebook.icon-customize(href="http://www.facebook.com/profile.php?id=100004410182145&fref=ts" target="_blank")
@@ -43,8 +43,17 @@ block content
 			.triangle-bottomright		
 			div(ng-view)
 			//- hr
-		//- .foot
-		//- 	p(style="color:white") LEAVE THIS SPACE FOR FOOTER				
+		footer.foot.row
+			.col-md-8.col-md-offset-2
+				span(style="color:white") All content copyright <a style="font-weight:bold;" href="#">Ke</a> © 2016 • All rights reserved &nbsp;|
+				a.btn.btn-social.btn-lg.btn-facebook.icon-customize(href="http://www.facebook.com/profile.php?id=100004410182145&fref=ts" target="_blank")
+					i.fa.fa-facebook
+				a.btn.btn-social.btn-lg.btn-linkedin.icon-customize(href="https://www.linkedin.com/profile/view?id=347236728&authType=NAME_SEARCH&authToken=rYL7&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2Cidx%3A2-1-2%2CtarId%3A1432703762797%2Ctas%3Ake" target="_blank")
+					i.fa.fa-linkedin
+				a.btn.btn-social.btn-lg.btn-github.icon-customize(href="http://github.com/zhangkecyrus" target="_blank")
+					i.fa.fa-github
+				a.btn.btn-lg.icon-customize(href="mailto:zhangkecyrus@gmail.com")
+					i.fa.fa-envelope
 block scripts
 	script(src='/vendor/freelancer/js/jquery-1.11.0.js')
 	script(src='/vendor/bootstrap/js/bootstrap.min.js')
