--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -16,7 +16,8 @@ block content
 		.content
 			.center-block
 				.description
-					p Ke is a passionate computer polyglot who is fueled by the idea of designing and creating.
+					p I'm Ke Zhang, a computer polyglot, web and unix philosophy 
+						i.fa.fa-heart &nbsp;'r
 			.container.profile-pic
 				.row
 					.col-lg-12.col-xs-12
@@ -69,7 +70,6 @@ block scripts
 
 	//- scroll magic
 	script(src='/javascripts/scrollmagic/myscrollmagic.js')
-
 
 	//- app
 	script(src='/javascripts/apps/Ke-app-module.js')
