--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -17,7 +17,7 @@ block content
 			.center-block
 				.description
 					p I'm Ke Zhang, a computer polyglot, web and unix philosophy 
-						i.fa.fa-heart &nbsp;'r
+						i.fa.fa-heart &nbsp;'R
 			.container.profile-pic
 				.row
 					.col-lg-12.col-xs-12
